# ice-lens-model

./: LICENSE  README.md
ice_model_project_cycles/: 3dplot.py
ice_model_project_cycles/docs/: CMakeLists.txt  joss.rst
ice_model_project_cycles/docs/manual/: getting_started.rst  user_guide.rst
ice_model_project_cycles/example/: CMakeLists.txt  example.cpp  vertical_wall.inp
ice_model_project_cycles/postprocessing/: 2dplot.py  3dplot.py
ice_model_project_cycles/src/: FDM_ff.cpp  FDM_icelens.cpp  FDM_icelens.hpp  FDM_icelens_implicit.hpp  FDM_solver.cpp  FDM_solver.hpp  Ice_model.cpp  Ice_model.hpp
ice_model_project_monotonic/: 2dplot.py  3dplot.py  CMakeLists.txt
ice_model_project_monotonic/docs/: Doxyfile.in  conf.py  index.rst
ice_model_project_monotonic/docs/manual/: developer_guide.rst
ice_model_project_monotonic/example/: example.cpp  vertical_wall.inp
ice_model_project_monotonic/periodicity_ana/: N_ana.py  ice_lens_results.py  vertical_wall_template.inp
ice_model_project_monotonic/periodicity_ana/lib/: JobRunner.py
ice_model_project_monotonic/postprocessing/periodicity_ana/: N_ana.py  ice_lens_results.py  vertical_wall_template.inp
ice_model_project_monotonic/postprocessing/sensitivity_analysis/: ice_lens_results.py  sen_ana.py  vertical_wall_template.inp
ice_model_project_monotonic/sensitivity_analysis/: sen_ana.py  vertical_wall_template.inp
ice_model_project_monotonic/sensitivity_analysis/lib/: r_w.py
ice_model_project_monotonic/src/: CMakeLists.txt  FDM_ff.cpp  FDM_ff.hpp  FDM_icelens.cpp  FDM_icelens_implicit.cpp  FDM_solver.cpp  FDM_solver.hpp  Ice_model.cpp  Ice_model.hpp  input_file.hpp
